--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "cookie": "^1.0.2",
+    "date-fns": "^4.1.0",
     "firebase": "^11.8.1",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
