--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@vercel/analytics": "^1.5.0",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.2",
     "firebase": "^11.8.1",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "uuid": "^11.1.0"
