--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "firebase": "^11.8.1",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "next": "15.3.2",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.5.2",
