--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
