--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
+    "recharts": "^3.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19.1.6",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
