--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@vercel/analytics": "^1.5.0",
+    "canvas-confetti": "^1.9.3",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
@@ -26,10 +29,12 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
+    "three": "^0.180.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
